--- a/embeddings.v2.ipynb
+++ b/embeddings.v2.ipynb
@@ -5222,7 +5222,7 @@
     "- The embedding model we are using, and it's context length. [MTEB leaderboard](https://huggingface.co/spaces/mteb/leaderboard) is a good place to start.\n",
     "- The tokenizer the model uses, usually from the model page, like [nomic's embed 1.5](https://huggingface.co/nomic-ai/nomic-embed-text-v1.5).\n",
     "\n",
-    "We also have a new dependenc:\n",
+    "We also have a new dependencies:\n",
     "\n",
     "```bash\n",
     "uv add tokenizers\n",
@@ -5231,9 +5231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1af5a9176b3a4fb68cb18ec507321455",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from tokenizers import Tokenizer\n",
     "\n",
